# fpboost

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  mkdocs.yaml  pyproject.toml  src.ipynb  tox.ini
.github/: CODEOWNERS
.github/workflows/: test.yaml  test_build_release.yaml  wheels.yaml
docs/: conf.py  index.md  index.rst
experiments_src/: README.md  src.ipynb
experiments_src/utils/: data_loader.py
experiments_src/utils/datasets/: breast_cancer.csv  gbsg.csv  metabric.csv  support.csv  whas.csv
fpboost/: __init__.py  fpboost.py  fpboost_test.py  models.py  test_models.py
source/: index.rst
utils/datasets/: aids.csv  veterans.csv
